# MyTool

./: .gitignore  AGENTS.md  CMakeCache.txt  CMakeLists.txt  EDGEVISION_OPTIMIZATION_PLAN.md  Makefile  Makefile.Debug  Makefile.Release  MyTool.pro  NEXT_STEPS.md  PROJECT_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  app_config.json  cloud_edge_architecture.drawio  cmake_install.cmake  halcon_algorithm.cpp  halcon_algorithm.h  handian.json  image_processor.cpp  image_processor.h  image_utils.cpp  image_utils.h  image_view.cpp  image_view.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  new.json  package-lock.json  package.json  pipeline.cpp  pipeline.h  pipeline_manager.cpp  pipeline_manager.h  pipeline_steps.h  (+7 more)
.claude/: settings.local.json
.omo/run-continuation/: ses_15b530316ffeiJ1nNMgHbBzEZH.json  ses_16405f068ffejbeZYf0bNRvCzu.json  ses_165658706ffeiaETIBZ5YPqTwn.json
cloud_dashboard/: DEPLOY_TEMPLATE.json  Dockerfile  app.py  config.py  dashboard.db  db.py  docker-compose.yml  mqtt_handler.py  requirements.txt
cloud_dashboard/static/: app.js  style.css
cloud_dashboard/templates/: index.html
controllers/: algorithm_tab_controller.cpp  algorithm_tab_controller.h  enhancement_tab_controller.cpp  enhancement_tab_controller.h  extract_tab_controller.cpp  extract_tab_controller.h  filter_tab_controller.cpp  filter_tab_controller.h  image_tab_controller.cpp  image_tab_controller.h  line_detect_tab_controller.cpp  line_detect_tab_controller.h
include/: config_manager.h  detection_manager.h  enhance_tab_widget.h  file_manager.h  filter_condition.h  filter_tab_widget.h  halcon_algorithm.h  image_utils.h  image_view.h  log_page.h  logger.h  mainwindow.h  match_strategy.h  pipeline.h  pipeline_manager.h  pipeline_steps.h  pipeline_types.h  region_feature.h  roi_config.h  roi_item.h  roi_manager.h  shape_filter_types.h  system_monitor.h  template_controller.h  template_match_manager.h  template_tab_widget.h  template_ui_controller.h
include/algorithm/: detection_evaluator.h  display_renderer.h  dnn_inference.h  halcon_algorithm.h  image_processor.h  image_utils.h  match_strategy.h  opencv_algorithm.h  ort_inference.h  zxing_barcode_reader.h
include/config/: algorithm_step.h  barcode_config.h  blob_judge_config.h  color_filter_config.h  config_manager.h  constants.h  detection_config_types.h  detection_item.h  detection_type.h  display_config.h  enhance_config.h  enhance_params.h  image_filter_config.h  json_serializable.h  line_detect_config.h  mqtt_config.h  object_detection_config.h  ocr_config.h  pipeline_config.h  pipeline_config_mapper.h  roi_config.h  shape_feature.h  shape_filter_config.h  shape_filter_types.h  tab_config.h  vision_inspection_config.h
include/controllers/: auto_detection_controller.h  config_controller.h  detection_ui_controller.h  pipeline_result_handler.h  profile_controller.h  profile_manager.h  roi_detection_config_controller.h  roi_ui_controller.h
include/core/: barcode_step.h  i_pipeline_access.h  logger.h  mqtt_client.h  mqtt_manager.h  ocr_step.h  pipeline.h  pipeline_manager.h  pipeline_request.h  pipeline_result.h  pipeline_result_handler.h  pipeline_scheduler.h  pipeline_steps.h  pipeline_types.h  roi_manager.h  video_manager.h
include/data/: barcode_result.h  detection_result_report.h  inspection_profile.h  ocr_region.h  roi_detection_result.h  roi_item.h
include/ui/: barcode_step.h  cloud_dashboard_manager.h  display_mode_manager.h  file_manager.h  image_view.h  log_page.h  logger.h  mainwindow.h  pipeline_result_handler.h  roi_manager.h  signal_connector.h  slider_spinbox_binder.h  system_monitor.h  toast_notification.h
include/utils/: benchmark.h  id_utils.h  model_warmup.h  path_utils.h
include/widgets/: barcode_recognition_config_widget.h  barcode_tab_widget.h  batch_detection_widget.h  batch_match_dialog.h  blob_analysis_config_widget.h  detection_config_widget.h  enhance_tab_widget.h  extract_tab_widget.h  filter_tab_widget.h  i_configurable_tab.h  i_result_updatable.h  i_signal_connectable.h  i_tab_initializable.h  i_tab_interfaces.h  image_filter_tab_widget.h  image_list_manager.h  image_tab_widget.h  judge_tab_widget.h  line_detection_config_widget.h  line_tab_widget.h  object_detection_tab_widget.h  ocr_tab_widget.h  process_tab_widget.h  profile_tab_widget.h  roi_detection_config_dialog.h  roi_list_widget.h  step_config_widget.h  tab_manager.h  tab_registry.h  template_tab_widget.h  video_source_widget.h  video_tab_widget.h
resources/: 424.json  4241.json  new.json  res.qrc  style.qss
resources/template/: 2.json  temp1.json  test.tpl
src/: barcode_step.cpp  config_manager.cpp  detection_manager.cpp  enhance_tab_widget.cpp  file_manager.cpp  filter_tab_widget.cpp  halcon_algorithm.cpp  image_processor.cpp  image_tab_widget.cpp  image_utils.cpp  image_view.cpp  log_page.cpp  logger.cpp  main.cpp  mainwindow.cpp  match_strategy.cpp  pipeline.cpp  pipeline_manager.cpp  pipeline_steps.cpp  roi_manager.cpp  system_monitor.cpp  template_controller.cpp  template_match_manager.cpp  template_ui_controller.cpp
src/algorithm/: detection_evaluator.cpp  display_renderer.cpp  dnn_inference.cpp  halcon_algorithm.cpp  image_processor.cpp  image_utils.cpp  match_strategy.cpp  opencv_algorithm.cpp  ort_inference.cpp  zxing_barcode_reader.cpp
src/config/: config_manager.cpp  detection_config_types.cpp  detection_item.cpp  pipeline_config.cpp  pipeline_config_mapper.cpp  roi_config.cpp
src/controllers/: auto_detection_controller.cpp  config_controller.cpp  detection_ui_controller.cpp  pipeline_result_handler.cpp  profile_controller.cpp  profile_manager.cpp  roi_detection_config_controller.cpp  roi_ui_controller.cpp
src/core/: barcode_step.cpp  logger.cpp  mqtt_client.cpp  mqtt_manager.cpp  ocr_step.cpp  pipeline.cpp  pipeline_image_filter_steps.cpp  pipeline_manager.cpp  pipeline_result_handler.cpp  pipeline_scheduler.cpp  pipeline_steps.cpp  profile_manager.cpp  roi_manager.cpp  (+1 more)
ui/: log_page.ui  mainwindow.ui  mainwindow.ui.autosave  mainwindow_new.ui
(+57 files in other folders)
